# opencode-llm-wiki

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  MCP_INTEGRATION.md  MIGRATION_CHECKLIST.md  README.md  README_CN.md  README_ZH.md  config.example.toml  llm-wiki-global.jsonc.tmp  llm-wiki.jsonc.tmp  opencode.jsonc  package-lock.json  package.json
.opencode/: openwork.json
benches/: storage_benchmark.rs
docs/: LLM+RuVector.md  README.md  RELEASE_v1.1.0.md  RUVECTOR_PHASE1_COMPLETE.md  RUVECTOR_PHASE2_COMPLETE.md  STORAGE_REFACTORING_PLAN.md  V1.1.0_VERIFICATION.md
docs/api/: server.md
docs/architecture/: 3-layer-refactoring-plan.md  cleanup-plan.md  final.md  knowledge-graph.md  overview.md  restructure-plan.md  ruvector-integration.md  ruvector-migration-roadmap.md  simplified.md
docs/development/: setup.md
docs/guides/: deployment-windows.md  knowledge-graph-setup.md  llm-config.md  mcp-server.md
docs/superpowers/plans/: 2026-05-18-docker-deployment.md
docs/superpowers/specs/: 2026-05-18-docker-deployment-design.md
scripts/: build-server.sh  migrate_to_ruvector.sh
src/: cli.rs  lib.rs  main.rs
src-desktop/ui-new/: App.tsx
src-desktop/ui-new/components/chat/: chat-message.tsx  chat-panel.tsx
src-desktop/ui-new/components/graph/: graph-view.tsx
src-desktop/ui-new/components/lint/: lint-view.tsx
src-desktop/ui-new/lib/: deep-research.ts  enrich-wikilinks.test.ts  enrich-wikilinks.ts  ingest-queue.test.ts  lint.test.ts  lint.ts  llm-config-commands.ts  llm-config-file.ts  path-utils.test.ts  project-mutex.ts  raw-watcher.ts  sweep-reviews.race.test.ts  templates.ts  wiki-cleanup.ts  wiki-page-delete.test.ts
src-legacy/lib/: embedding.test.ts  ingest-parse.test.ts  ingest.real-llm.test.ts  ingest.ts  search.ts
src-mcp/: .npmignore  README.md  package.json
src-mcp/src/: server.js
src-mcp/src/lib/: context-manager.js  core-api-client.js  graph-analyzer.js  semantic-search.js  utils.js  vector-cache.js  wiki-bridge.js
src-web/: .mcp.json  README.md  cli.js  package-lock.json  package.json  server.js
src-web/lib/: core-api-client.js  database.js  file-watcher.js  indexer.js  keyword-detector.js
src/api/: config.rs  handlers.rs  mod.rs  routes.rs  server.rs  state.rs
src/services/: chunking.rs  embedding.rs  ingest.rs  ingest_engine.rs  llm_client.rs  mod.rs  query.rs  token_cache.rs
src/services/llm_client/: providers.rs
src/storage/: deduplication.rs  fs_utils.rs  hash_index.rs  lancedb.rs  lancedb_impl.rs  migration.rs  mod.rs  project_registry.rs  ref_counter.rs  ruvector_impl.rs  traits.rs
src/types/: api.rs  mod.rs  storage.rs
src/utils/: mod.rs  panic_guard.rs
src/wiki/: cypher.rs  filesystem.rs  graph.rs  graph_algorithms.rs  graph_algorithms_impl.rs  index.rs  mod.rs
(+4 files in other folders)
