[package]
name = "llm-wiki-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Moow"]

[[bin]]
name = "llm-wiki-server"
path = "src/main.rs"

[[bin]]
name = "llm-wiki"
path = "src/cli.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web 框架
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Token 处理
tiktoken-rs = "0.5"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 向量数据库 (临时使用 LanceDB，后续替换为 RuVector)
lancedb = "0.27.2"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
futures-util = "0.3"

# 工具库
regex = "1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-stream = "0.3"

[dev-dependencies]
criterion = "0.5"
