[package]
name = "llm-wiki-server"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Moow"]

[[bin]]
name = "llm-wiki-server"
path = "src/main.rs"

[[bin]]
name = "llm-wiki"
path = "src/cli.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web 框架
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Token 处理
tiktoken-rs = "0.5"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 向量数据库 - RuVector (向量 + 图 + GNN 一体化)
ruvector-core = { version = "2.2.0", optional = true }
ruvector-graph = { version = "2.2.0", optional = true }
ruvector-gnn = { version = "2.2.0", optional = true }

# LanceDB (保留作为备选方案)
lancedb = { version = "0.27.2", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
futures = "0.3"
futures-util = "0.3"

# 工具库
regex = "1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-stream = "0.3"
walkdir = "2"

[features]
default = ["ruvector"]
ruvector = ["ruvector-core", "ruvector-graph", "ruvector-gnn"]
lancedb-backend = ["lancedb", "arrow-array", "arrow-schema"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "storage_benchmark"
harness = false
